package com.osmowsis;

enum ActionState {
    move,
    scan,
    crash,
    unknown,
    empty
}
