package com.osmowsis;

import java.util.HashMap;
import java.util.Map;

enum LawnState {
    grass,
    crater,
    mower,
    empty,
    fence
}