package com.osmowsis;

enum MowerState {
    crashed,
    running,
    off
}